# postgwas_pleio

./: .gitignore  Dockerfile  Dockerfile_worked  MANIFEST.in  README.md  pyproject.toml
installation/: Dockerfile  instllation.sh
installation/env_files/: mtag_env.yml
src/postgwas_pleio/: __main__.py
src/postgwas_pleio/clis/: cli.py  metanalysis_cli.py
src/postgwas_pleio/formatter/: asset_formatter.py  master_tsv_to_tool_format.py  master_tsv_to_tool_format_back.py  merge_vcf_to_tsv.py  merge_vcf_to_tsv_back.py  mtag_formatter.py  pleio_formatter.py
src/postgwas_pleio/formatter/archived/: asset_formatter.py  placo_formatter.py
src/postgwas_pleio/meta_analysis/: meta_analysis_cli.py
src/postgwas_pleio/meta_analysis/asset/: asset_direct.py  asset_pipeline.py  asset_pipeline_back.py  main.py  workflow.py
src/postgwas_pleio/meta_analysis/asset/R/: asset_cli.R  fast_asset_analysis.R  fast_asset_analysis_back.r  helpers.R
src/postgwas_pleio/meta_analysis/genomicpca/: genomicpca_direct.py  genomicpca_pipeline.py  main.py  workflow.py
src/postgwas_pleio/meta_analysis/genomicpca/R/: N_weighted_GWAMA.function.1_2_6.R  genomicpca_analysis.R  genomicpca_cli.R  helpers.R
src/postgwas_pleio/meta_analysis/metal/: harmonise_input.py  main.py  metal_direct.py  metal_pipeline.py  script_generator.py  workflow.py
src/postgwas_pleio/meta_analysis/mtag/: main.py  mtag_direct.py  mtag_pipeline.py  workflow.py
src/postgwas_pleio/meta_analysis/placo/: main.py  placo_direct.py  placo_pipeline.py  workflow.py
src/postgwas_pleio/meta_analysis/placo/R/: helpers.R  placo_cli.R  placo_pipeline copy.R  placo_pipeline.R
src/postgwas_pleio/meta_analysis/pleio/: main.py  pleio_direct.py  pleio_pipeline.py  pleio_pipeline_back.py  workflow.py
src/postgwas_pleio/utils/: formatters.py  harmonise_input.py  harmonise_input_original.py  input_manifest_val.py  logging_utils.py  process_external_files.py
tests/: meta_analysis_test.sh  test_run.sh
